fixes alignment for real

--- a/css/mystyles.scss
+++ b/css/mystyles.scss
@@ -243,7 +243,7 @@ main {
         width: 75%;
         display: flex;
         .icon-separate {
-          padding-right: 10px;
+          margin-right: 4%;
         }
       }
     }
